--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FH5 Meta Cars</title>
-</head>
-<body>
-    <div class="head">
-        <h1>Microsoft Flight Sim Mods</h1>
-    </div>
-    <div class="card">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>National and State Parks</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
+  <body>
+    <div class="head">
+      <!-- <h1>National and State Parks</h1> -->
     </div>
-</body>
+    <div class="sample">Sample</div>
+    <div class="sample">Sample</div>
+    <div class="sample">Sample</div>
+    <!-- <div class="card">
+      <h2>Sample</h2>
+      <p>Text Sample Text</p>
+    </div> -->
+  </body>
+  <div class="mokey"></div>
 </html>
