--- a/index.html
+++ b/index.html
@@ -8,22 +8,98 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
 
   <body>
     <div class="head">
-      <!-- <h1>National and State Parks</h1> -->
+      <h1>National Parks</h1>
     </div>
-    <div class="sample">Sample</div>
-    <div class="sample">Sample</div>
-    <div class="sample">Sample</div>
-    <!-- <div class="card">
-      <h2>Sample</h2>
-      <p>Text Sample Text</p>
-    </div> -->
+    <div class="content-bin">
+      <div class="card">
+        <h2>Great Sand Dunes National Park</h2>
+        <img
+          src="img/great-sand-dunes-park.jpg"
+          alt="Picture of Sand Dunes"
+          width="80%"
+        />
+        <p><a href="">View</a></p>
+      </div>
+      <div class="card">
+        <h2>Great Sand Dunes National Park</h2>
+        <img
+          src="img/great-sand-dunes-park.jpg"
+          alt="Picture of Sand Dunes"
+          width="80%"
+        />
+        <p><a href="">View</a></p>
+      </div>
+      <div class="card">
+        <h2>Great Sand Dunes National Park</h2>
+        <img
+          src="img/great-sand-dunes-park.jpg"
+          alt="Picture of Sand Dunes"
+          width="80%"
+        />
+        <p><a href="">View</a></p>
+      </div>
+      <div class="card">
+        <h2>Great Sand Dunes National Park</h2>
+        <img
+          src="img/great-sand-dunes-park.jpg"
+          alt="Picture of Sand Dunes"
+          width="80%"
+        />
+        <p><a href="">View</a></p>
+      </div>
+      <div class="card">
+        <h2>Great Sand Dunes National Park</h2>
+        <img
+          src="img/great-sand-dunes-park.jpg"
+          alt="Picture of Sand Dunes"
+          width="80%"
+        />
+        <p><a href="">View</a></p>
+      </div>
+      <div class="card">
+        <h2>Great Sand Dunes National Park</h2>
+        <img
+          src="img/great-sand-dunes-park.jpg"
+          alt="Picture of Sand Dunes"
+          width="80%"
+        />
+        <p><a href="">View</a></p>
+      </div>
+      <div class="card">
+        <h2>Great Sand Dunes National Park</h2>
+        <img
+          src="img/great-sand-dunes-park.jpg"
+          alt="Picture of Sand Dunes"
+          width="80%"
+        />
+        <p><a href="">View</a></p>
+      </div>
+      <div class="card">
+        <h2>Great Sand Dunes National Park</h2>
+        <img
+          src="img/great-sand-dunes-park.jpg"
+          alt="Picture of Sand Dunes"
+          width="80%"
+        />
+        <p><a href="">View</a></p>
+      </div>
+      <div class="card">
+        <h2>Great Sand Dunes National Park</h2>
+        <img
+          src="img/great-sand-dunes-park.jpg"
+          alt="Picture of Sand Dunes"
+          width="80%"
+        />
+        <p><a href="">View</a></p>
+      </div>
+    </div>
   </body>
   <div class="mokey"></div>
 </html>
