--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           alt="Picture of Sand Dunes"
           width="80%"
         />
-        <p><a href="">View</a></p>
+        <p><a class="card-link" href="">View</a></p>
       </div>
       <div class="card">
         <h2>Great Sand Dunes National Park</h2>
@@ -34,7 +34,7 @@
           alt="Picture of Sand Dunes"
           width="80%"
         />
-        <p><a href="">View</a></p>
+        <p><a class="card-link" href="">View</a></p>
       </div>
       <div class="card">
         <h2>Great Sand Dunes National Park</h2>
@@ -43,7 +43,7 @@
           alt="Picture of Sand Dunes"
           width="80%"
         />
-        <p><a href="">View</a></p>
+        <p><a class="card-link" href="">View</a></p>
       </div>
       <div class="card">
         <h2>Great Sand Dunes National Park</h2>
@@ -52,7 +52,7 @@
           alt="Picture of Sand Dunes"
           width="80%"
         />
-        <p><a href="">View</a></p>
+        <p><a class="card-link" href="">View</a></p>
       </div>
       <div class="card">
         <h2>Great Sand Dunes National Park</h2>
@@ -61,7 +61,7 @@
           alt="Picture of Sand Dunes"
           width="80%"
         />
-        <p><a href="">View</a></p>
+        <p><a class="card-link" href="">View</a></p>
       </div>
       <div class="card">
         <h2>Great Sand Dunes National Park</h2>
@@ -70,7 +70,7 @@
           alt="Picture of Sand Dunes"
           width="80%"
         />
-        <p><a href="">View</a></p>
+        <p><a class="card-link" href="">View</a></p>
       </div>
       <div class="card">
         <h2>Great Sand Dunes National Park</h2>
@@ -79,7 +79,7 @@
           alt="Picture of Sand Dunes"
           width="80%"
         />
-        <p><a href="">View</a></p>
+        <p><a class="card-link" href="">View</a></p>
       </div>
       <div class="card">
         <h2>Great Sand Dunes National Park</h2>
@@ -88,7 +88,7 @@
           alt="Picture of Sand Dunes"
           width="80%"
         />
-        <p><a href="">View</a></p>
+        <p><a class="card-link" href="">View</a></p>
       </div>
       <div class="card">
         <h2>Great Sand Dunes National Park</h2>
