--- a/index.html
+++ b/index.html
@@ -21,83 +21,111 @@
       <div class="card">
         <h2>Great Sand Dunes National Park</h2>
         <img
+          class="card-img"
           src="img/great-sand-dunes-park.jpg"
-          alt="Picture of Sand Dunes"
-          width="80%"
+          alt="Sand Dunes"
         />
-        <p><a class="card-link" href="">View</a></p>
+        <p>
+          <a class="card-link" href="https://www.nps.gov/grsa/index.htm"
+            >View</a
+          >
+        </p>
       </div>
       <div class="card">
-        <h2>Great Sand Dunes National Park</h2>
-        <img
-          src="img/great-sand-dunes-park.jpg"
-          alt="Picture of Sand Dunes"
-          width="80%"
-        />
-        <p><a class="card-link" href="">View</a></p>
+        <h2>Arches National Park</h2>
+        <img class="card-img" src="img/arches.jpg" alt="Arch Rock Formation" />
+        <p>
+          <a class="card-link" href="https://www.nps.gov/arch/index.htm"
+            >View</a
+          >
+        </p>
       </div>
       <div class="card">
-        <h2>Great Sand Dunes National Park</h2>
+        <h2>Dry Tortugas National Park</h2>
         <img
-          src="img/great-sand-dunes-park.jpg"
-          alt="Picture of Sand Dunes"
-          width="80%"
+          class="card-img"
+          src="img/dry-tortugas.jpg"
+          alt="Lighthouse on Trpoical Island"
         />
-        <p><a class="card-link" href="">View</a></p>
+        <p>
+          <a class="card-link" href="https://www.nps.gov/drto/index.htm"
+            >View</a
+          >
+        </p>
       </div>
       <div class="card">
-        <h2>Great Sand Dunes National Park</h2>
+        <h2>Yosemite National Park</h2>
         <img
-          src="img/great-sand-dunes-park.jpg"
-          alt="Picture of Sand Dunes"
-          width="80%"
+          class="card-img"
+          src="img/yosemite.jpg"
+          alt="Mountainous Landscape"
         />
-        <p><a class="card-link" href="">View</a></p>
+        <p>
+          <a class="card-link" href="https://www.nps.gov/yose/index.htm"
+            >View</a
+          >
+        </p>
       </div>
       <div class="card">
-        <h2>Great Sand Dunes National Park</h2>
+        <h2>Joshua Tree National Park</h2>
         <img
-          src="img/great-sand-dunes-park.jpg"
-          alt="Picture of Sand Dunes"
-          width="80%"
+          class="card-img"
+          src="img/joshua-tree.jpg"
+          alt="Joshua Tree in Sunset"
         />
-        <p><a class="card-link" href="">View</a></p>
+        <p>
+          <a class="card-link" href="https://www.nps.gov/jotr/index.htm"
+            >View</a
+          >
+        </p>
       </div>
       <div class="card">
-        <h2>Great Sand Dunes National Park</h2>
+        <h2>Petrified Forest National Park</h2>
         <img
-          src="img/great-sand-dunes-park.jpg"
-          alt="Picture of Sand Dunes"
-          width="80%"
+          class="card-img"
+          src="img/petrified-forest.jpg"
+          alt="Orange Rock Landscape"
         />
-        <p><a class="card-link" href="">View</a></p>
+        <p>
+          <a class="card-link" href="https://www.nps.gov/pefo/index.htm"
+            >View</a
+          >
+        </p>
       </div>
       <div class="card">
-        <h2>Great Sand Dunes National Park</h2>
+        <h2>Hawai'i Volcanoes National Park</h2>
         <img
-          src="img/great-sand-dunes-park.jpg"
-          alt="Picture of Sand Dunes"
-          width="80%"
+          class="card-img"
+          src="img/hawaii-volcano-lava.jpg"
+          alt="Volcano Lava Flow"
         />
-        <p><a class="card-link" href="">View</a></p>
+        <p>
+          <a class="card-link" href="https://www.nps.gov/havo/index.htm"
+            >View</a
+          >
+        </p>
       </div>
       <div class="card">
-        <h2>Great Sand Dunes National Park</h2>
-        <img
-          src="img/great-sand-dunes-park.jpg"
-          alt="Picture of Sand Dunes"
-          width="80%"
-        />
-        <p><a class="card-link" href="">View</a></p>
+        <h2>Sequoia National Park</h2>
+        <img class="card-img" src="img/sequioa-tree.jpg" alt="Sequoia Tree" />
+        <p>
+          <a class="card-link" href="https://www.nps.gov/seki/index.htm"
+            >View</a
+          >
+        </p>
       </div>
       <div class="card">
-        <h2>Great Sand Dunes National Park</h2>
+        <h2>Denali National Park</h2>
         <img
-          src="img/great-sand-dunes-park.jpg"
-          alt="Picture of Sand Dunes"
-          width="80%"
+          class="card-img"
+          src="img/denali.jpg"
+          alt="Mountain Landscape with Lake"
         />
-        <p><a href="">View</a></p>
+        <p>
+          <a class="card-link" href="https://www.nps.gov/dena/index.htm"
+            >View</a
+          >
+        </p>
       </div>
     </div>
   </body>
