--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="content-bin">
       <div class="card">
-        <h2>Great Sand Dunes National Park</h2>
+        <h2 class="card-title">Great Sand Dunes National Park</h2>
         <img
           class="card-img"
           src="img/great-sand-dunes-park.jpg"
@@ -32,7 +32,7 @@
         </p>
       </div>
       <div class="card">
-        <h2>Arches National Park</h2>
+        <h2 class="card-title">Arches National Park</h2>
         <img class="card-img" src="img/arches.jpg" alt="Arch Rock Formation" />
         <p>
           <a class="card-link" href="https://www.nps.gov/arch/index.htm"
@@ -41,7 +41,7 @@
         </p>
       </div>
       <div class="card">
-        <h2>Dry Tortugas National Park</h2>
+        <h2 class="card-title">Dry Tortugas National Park</h2>
         <img
           class="card-img"
           src="img/dry-tortugas.jpg"
@@ -54,7 +54,7 @@
         </p>
       </div>
       <div class="card">
-        <h2>Yosemite National Park</h2>
+        <h2 class="card-title">Yosemite National Park</h2>
         <img
           class="card-img"
           src="img/yosemite.jpg"
@@ -67,7 +67,7 @@
         </p>
       </div>
       <div class="card">
-        <h2>Joshua Tree National Park</h2>
+        <h2 class="card-title">Joshua Tree National Park</h2>
         <img
           class="card-img"
           src="img/joshua-tree.jpg"
@@ -80,7 +80,7 @@
         </p>
       </div>
       <div class="card">
-        <h2>Petrified Forest National Park</h2>
+        <h2 class="card-title">Petrified Forest National Park</h2>
         <img
           class="card-img"
           src="img/petrified-forest.jpg"
@@ -93,7 +93,7 @@
         </p>
       </div>
       <div class="card">
-        <h2>Hawai'i Volcanoes National Park</h2>
+        <h2 class="card-title">Hawai'i Volcanoes National Park</h2>
         <img
           class="card-img"
           src="img/hawaii-volcano-lava.jpg"
@@ -106,7 +106,7 @@
         </p>
       </div>
       <div class="card">
-        <h2>Sequoia National Park</h2>
+        <h2 class="card-title">Sequoia National Park</h2>
         <img class="card-img" src="img/sequioa-tree.jpg" alt="Sequoia Tree" />
         <p>
           <a class="card-link" href="https://www.nps.gov/seki/index.htm"
@@ -115,7 +115,7 @@
         </p>
       </div>
       <div class="card">
-        <h2>Denali National Park</h2>
+        <h2 class="card-title">Denali National Park</h2>
         <img
           class="card-img"
           src="img/denali.jpg"
