--- a/index.html
+++ b/index.html
@@ -1,132 +1,87 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>National Parks</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>National Parks</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="head-bin">
     <div class="head">
       <h1>National Parks</h1>
     </div>
-    <div class="content-bin">
-      <div class="card">
-        <h2 class="card-title">Great Sand Dunes National Park</h2>
-        <img
-          class="card-img"
-          src="img/great-sand-dunes-park.jpg"
-          alt="Sand Dunes"
-        />
-        <p>
-          <a class="card-link" href="https://www.nps.gov/grsa/index.htm"
-            >View</a
-          >
-        </p>
-      </div>
-      <div class="card">
-        <h2 class="card-title">Arches National Park</h2>
-        <img class="card-img" src="img/arches.jpg" alt="Arch Rock Formation" />
-        <p>
-          <a class="card-link" href="https://www.nps.gov/arch/index.htm"
-            >View</a
-          >
-        </p>
-      </div>
-      <div class="card">
-        <h2 class="card-title">Dry Tortugas National Park</h2>
-        <img
-          class="card-img"
-          src="img/dry-tortugas.jpg"
-          alt="Lighthouse on Trpoical Island"
-        />
-        <p>
-          <a class="card-link" href="https://www.nps.gov/drto/index.htm"
-            >View</a
-          >
-        </p>
-      </div>
-      <div class="card">
-        <h2 class="card-title">Yosemite National Park</h2>
-        <img
-          class="card-img"
-          src="img/yosemite.jpg"
-          alt="Mountainous Landscape"
-        />
-        <p>
-          <a class="card-link" href="https://www.nps.gov/yose/index.htm"
-            >View</a
-          >
-        </p>
-      </div>
-      <div class="card">
-        <h2 class="card-title">Joshua Tree National Park</h2>
-        <img
-          class="card-img"
-          src="img/joshua-tree.jpg"
-          alt="Joshua Tree in Sunset"
-        />
-        <p>
-          <a class="card-link" href="https://www.nps.gov/jotr/index.htm"
-            >View</a
-          >
-        </p>
-      </div>
-      <div class="card">
-        <h2 class="card-title">Petrified Forest National Park</h2>
-        <img
-          class="card-img"
-          src="img/petrified-forest.jpg"
-          alt="Orange Rock Landscape"
-        />
-        <p>
-          <a class="card-link" href="https://www.nps.gov/pefo/index.htm"
-            >View</a
-          >
-        </p>
-      </div>
-      <div class="card">
-        <h2 class="card-title">Hawai'i Volcanoes National Park</h2>
-        <img
-          class="card-img"
-          src="img/hawaii-volcano-lava.jpg"
-          alt="Volcano Lava Flow"
-        />
-        <p>
-          <a class="card-link" href="https://www.nps.gov/havo/index.htm"
-            >View</a
-          >
-        </p>
-      </div>
-      <div class="card">
-        <h2 class="card-title">Sequoia National Park</h2>
-        <img class="card-img" src="img/sequioa-tree.jpg" alt="Sequoia Tree" />
-        <p>
-          <a class="card-link" href="https://www.nps.gov/seki/index.htm"
-            >View</a
-          >
-        </p>
-      </div>
-      <div class="card">
-        <h2 class="card-title">Denali National Park</h2>
-        <img
-          class="card-img"
-          src="img/denali.jpg"
-          alt="Mountain Landscape with Lake"
-        />
-        <p>
-          <a class="card-link" href="https://www.nps.gov/dena/index.htm"
-            >View</a
-          >
-        </p>
-      </div>
+  </div>
+  <div class="content-bin">
+    <div class="card">
+      <h2 class="card-title">Great Sand Dunes National Park</h2>
+      <img class="card-img" src="img/great-sand-dunes-park.jpg" alt="Sand Dunes" />
+      <p>
+        <a class="card-link" href="https://www.nps.gov/grsa/index.htm">View</a>
+      </p>
     </div>
-  </body>
+    <div class="card">
+      <h2 class="card-title">Arches National Park</h2>
+      <img class="card-img" src="img/arches.jpg" alt="Arch Rock Formation" />
+      <p>
+        <a class="card-link" href="https://www.nps.gov/arch/index.htm">View</a>
+      </p>
+    </div>
+    <div class="card">
+      <h2 class="card-title">Dry Tortugas National Park</h2>
+      <img class="card-img" src="img/dry-tortugas.jpg" alt="Lighthouse on Trpoical Island" />
+      <p>
+        <a class="card-link" href="https://www.nps.gov/drto/index.htm">View</a>
+      </p>
+    </div>
+    <div class="card">
+      <h2 class="card-title">Yosemite National Park</h2>
+      <img class="card-img" src="img/yosemite.jpg" alt="Mountainous Landscape" />
+      <p>
+        <a class="card-link" href="https://www.nps.gov/yose/index.htm">View</a>
+      </p>
+    </div>
+    <div class="card">
+      <h2 class="card-title">Joshua Tree National Park</h2>
+      <img class="card-img" src="img/joshua-tree.jpg" alt="Joshua Tree in Sunset" />
+      <p>
+        <a class="card-link" href="https://www.nps.gov/jotr/index.htm">View</a>
+      </p>
+    </div>
+    <div class="card">
+      <h2 class="card-title">Petrified Forest National Park</h2>
+      <img class="card-img" src="img/petrified-forest.jpg" alt="Orange Rock Landscape" />
+      <p>
+        <a class="card-link" href="https://www.nps.gov/pefo/index.htm">View</a>
+      </p>
+    </div>
+    <div class="card">
+      <h2 class="card-title">Hawai'i Volcanoes National Park</h2>
+      <img class="card-img" src="img/hawaii-volcano-lava.jpg" alt="Volcano Lava Flow" />
+      <p>
+        <a class="card-link" href="https://www.nps.gov/havo/index.htm">View</a>
+      </p>
+    </div>
+    <div class="card">
+      <h2 class="card-title">Sequoia National Park</h2>
+      <img class="card-img" src="img/sequioa-tree.jpg" alt="Sequoia Tree" />
+      <p>
+        <a class="card-link" href="https://www.nps.gov/seki/index.htm">View</a>
+      </p>
+    </div>
+    <div class="card">
+      <h2 class="card-title">Denali National Park</h2>
+      <img class="card-img" src="img/denali.jpg" alt="Mountain Landscape with Lake" />
+      <p>
+        <a class="card-link" href="https://www.nps.gov/dena/index.htm">View</a>
+      </p>
+    </div>
+  </div>
+</body>
+
 </html>
